--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -44,9 +44,7 @@ layout: default
       <ul>
         <!-- list components that make up recipe -->
         {% for component in page.components %}
-        {% assign reci = page.recipes | where: 'title', component.title | first %}
-        
-        <li>{{ reci | markdownify }}</li>
+        <li>{{ component | markdownify }}</li>
         {% endfor %}
       </ul>
       {% endif %}
